# memento

./: .coverage  .flake8  .gitignore  API.md  AUDIT.md  BENCHMARK.md  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  DISCUSSION.md  GITHUB_ISSUES_TO_CREATE.md  INSTALL.md  MISSION.md  Makefile  OPENCLAW_INTEGRATION.md  README.md  RELEASE_NOTES.md  RESEARCH_REPORT.md  RESILIENT_MEMORY.md  RFC-001-RUST-ARCHITECTURE.md  ROADMAP.md  SECURITY.md  TODO.md  WORKFLOW.md  WORKFLOW_GUIDELINE.md  batch_benchmark.py  benchmark.py  cleanup_branches.sh  example.py  memento-wrapper-script.bak  monitor_github.sh  pyproject.toml  requirements.txt  run_tests.sh  watch_chat.sh  watch_github.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
RESEARCH/decisions/: 001-database-location.md
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  INDEX.md  ROADMAP.md  SECURITY.md  WORKFLOW.md
docs/DECISIONS/: INDEX.md
docs/RESEARCH/: README.md
docs/RESEARCH/papers/: AI_MEMORY_TECH_2026.md
docs/workflows/: DEVELOPMENT.md
issues/: 01-cleanup-legacy-scripts.md  02-fix-test-suite.md  03-unify-database-location.md  04-fix-auto-memory.md  05-rust-embedding-engine.md  06-openclaw-integration.md  07-pypi-package.md  08-human-like-memory.md  09-raspberry-pi-optimization.md  10-web-dashboard.md  13-cold-start-slow.md  14-query-timeout.md  15-import-path-fix.md  17-searchresult-item-assignment.md  18-persistentcache-get-cache-key.md  19-model-ram-idle.md  20-cache-warming.md  memory-cli-visibility.md
memento/: __init__.py  auto_memory.py  cli.py  config.py  embed.py  exceptions.py  interfaces.py  openclaw_bridge.py  search.py  store.py  timeout.py  vector_search.py
memento-core/: Cargo.toml  README.md  pyproject.toml
memento-core/src/: embed.rs  lib.rs  model.rs
memento.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
openclaw_skill/: SKILL.md  __init__.py
prototypes/: echo_notifier.py
scripts/: analyze_bottlenecks.py  auto_store_hook.py  autonomous_worker.sh  ci_manager.sh  cli.py  compactor.py  conversation_memory.py  dashboard.py  debug_avx2.py  debug_onnx_check.py  embed.py  export_onnx.py  ingest.py  interfaces.py  memento_failure_handler.py  migrations.py  models.py  monitor.py  processor.py  rita-check-reply.sh  rita-live-sync.sh  rita-say.sh  rita_watcher.sh  search.py  semantic_chunker.py  session_recovery.py  session_watcher.py  store.py  test_onnx.py  vector_ops.py  warmup.py  watch_github.sh
scripts.backup.20260217_100108/: auto_memory.py  auto_store.py  backfill_embeddings.py  cli.py  config.py  conversation_memory.py  logging_config.py  memento_health.sh  session_watcher.py  store.py
scripts/utils/: logger.py
tests/: conftest.py  test_cache.py  test_core.py  test_edge_cases.py  test_embed_cache.py  test_models.py  test_performance.py  test_search.py  test_store_edge_cases.py  test_stress.py
