[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memento"
version = "0.2.0"
description = "Persistent semantic memory for AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rita", email = "rita@example.com"}
]
keywords = ["memory", "embeddings", "semantic-search", "ai", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "sentence-transformers>=2.0.0",
    "rich>=10.0.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
memento = "memento.cli:main"

[project.urls]
Homepage = "https://github.com/Rollersrights/memento"
Repository = "https://github.com/Rollersrights/memento"

[tool.setuptools.packages.find]
where = ["."]
include = ["memento*"]
exclude = ["tests*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
