[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memento"
version = "0.2.2"
description = "Persistent semantic memory for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rita", email = "rita@example.com"},
    {name = "Bob", email = "bob@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers>=2.0.0",
    "numpy>=1.20.0",
    "rich>=10.0.0",
]

[project.scripts]
memento = "memento.cli:main"

[project.urls]
Homepage = "https://github.com/rollersrights/memento"
Repository = "https://github.com/rollersrights/memento"

[tool.setuptools]
packages = ["memento"]
